<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="main"
            type="com.example.android.javaquiz.MainActivity" />
    </data>

    <ScrollView xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryLight"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/basic_padding"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            tools:context="com.example.android.javaquiz.MainActivity">

            <TextView
                style="@style/questionHeadlines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Java_Quiz"
                android:textAlignment="center" />

            <TextView
                style="@style/customText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/basic_padding"
                android:text="@string/welcome_text_below_title"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/divider" />

            <!-- Question 1 -->
            <TextView
                style="@style/questionHeadlines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:text="@string/question_1_title" />

            <TextView
                style="@style/customText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:text="@string/question_1_contents" />

            <RadioGroup
                android:id="@+id/q1_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/q1_correct_ans_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/min_padding"
                    android:layout_weight="1"
                    android:text="yes" />

                <RadioButton
                    android:id="@+id/q1_wrong_ans_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/min_padding"
                    android:layout_weight="1"
                    android:text="no" />
            </RadioGroup>

            <!-- Question 2 -->
            <TextView
                style="@style/questionHeadlines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:text="@string/question_2_title" />

            <TextView
                android:id="@+id/textView"
                style="@style/customText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:text="@string/question_2_contents" />

            <EditText
                android:id="@+id/q2_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2" />

            <!-- Question 3 -->
            <TextView
                style="@style/questionHeadlines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:text="@string/question_3_title" />

            <TextView
                style="@style/customText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:text="@string/question_3_contents" />

            <EditText
                android:id="@+id/q3_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2" />

            <!-- Question 4 -->
            <TextView
                style="@style/questionHeadlines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:text="@string/question_4_title" />

            <TextView
                style="@style/customText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:text="@string/question_4_contents" />

            <RadioGroup
                android:id="@+id/q4_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/q4_wrong_1_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/min_padding"
                    android:text="@string/ttft_booleans" />

                <RadioButton
                    android:id="@+id/q4_correct_answer_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/min_padding"
                    android:text="@string/tfft_booleans" />

                <RadioButton
                    android:id="@+id/q4_wrong_2_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/min_padding"
                    android:text="@string/tttt_booleans" />

                <RadioButton
                    android:id="@+id/q4_wrong_3_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/min_padding"
                    android:text="@string/tttf_booleans" />

                <RadioButton
                    android:id="@+id/q4_wrong_4_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/min_padding"
                    android:text="@string/tftt_booleans" />
            </RadioGroup>

            <!-- Question 5 -->
            <TextView
                style="@style/questionHeadlines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:text="@string/question_5_title" />

            <TextView
                style="@style/customText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:text="@string/question_5_contents" />

            <RadioGroup
                android:id="@+id/q5_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/q5_wrong_ans_radio_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/min_padding"
                    android:layout_weight="1"
                    android:text="yes" />

                <RadioButton
                    android:id="@+id/q5_correct_ans_radio_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/min_padding"
                    android:layout_weight="1"
                    android:text="no" />
            </RadioGroup>

            <!-- Question 6 -->
            <TextView
                style="@style/questionHeadlines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:text="@string/question_6_title" />

            <TextView
                style="@style/customText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:text="@string/question_6_contents" />

            <EditText
                android:id="@+id/q6_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2" />

            <!-- Question 7 -->
            <TextView
                style="@style/questionHeadlines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:text="@string/question_7_title" />

            <TextView
                style="@style/customText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:text="@string/question_7_contents" />

            <EditText
                android:id="@+id/q7_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2" />

            <!-- Question 8 -->
            <TextView
                style="@style/questionHeadlines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:text="@string/question_8_title" />

            <TextView
                style="@style/customText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:text="@string/question_8_contents" />

            <EditText
                android:id="@+id/q8_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2" />

            <!-- Question 9 -->
            <TextView
                style="@style/questionHeadlines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:text="@string/question_9_title" />

            <TextView
                style="@style/customText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:text="@string/question_9_contents" />

            <LinearLayout
                android:id="@+id/q9_checkboxgroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/q9_count_1_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/public_word" />

                <CheckBox
                    android:id="@+id/q9_wrong_answer_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/private_word" />

                <CheckBox
                    android:id="@+id/q9_count_2_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/static_word" />

                <CheckBox
                    android:id="@+id/q9_count_3_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/final_word" />
            </LinearLayout>
            <!-- SUBMIT ANSWERS -->
            <TextView
                style="@style/customText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:text="@string/check_your_answers" />

            <TextView
                android:id="@+id/display_score_text_view"
                style="@style/customText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/small_padding"
                android:text="@string/your_score"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/submit_score_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/small_padding"
                    android:text="@string/my_score_button"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/reset_score_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/small_padding"
                    android:layout_toRightOf="@id/submit_score_button"
                    android:text="@string/reset_button" />
            </RelativeLayout>

            <Button
                android:id="@+id/highlight_answers_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/basic_padding"
                android:text="highlight answers" />

        </LinearLayout>
    </ScrollView>
</layout>